<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            style="@style/customTextview"
            android:hint="@string/enter_our_name"
            />
        <EditText
            style="@style/customTextview"
            android:hint="@string/enter_your_id"/>
        <EditText
            style="@style/customTextview"
            android:hint="@string/enter_your_dob"/>
        <EditText
            style="@style/customTextview"
            android:hint="@string/enter_your_blood_group"/>
        <EditText
            style="@style/customTextview"
            android:hint="@string/enter_your_state"/>
        <EditText
            style="@style/customTextview"
            android:hint="@string/enter_your_phone_number"
            />
        <EditText
            style="@style/customTextview"
            android:hint="@string/eter_your_state"/>
        <EditText
            style="@style/customTextview"
            android:hint="@string/enter_your_district"/>
        <EditText
            style="@style/customTextview"
            android:hint="@string/enter_your_address"/>




    </LinearLayout>



</ScrollView>